static/style.css
*,
body,
html {
  top: 0;
  left: 0;
  margin: 0;
}
html {
  overflow-x: hidden;
  overflow-x: clip;
}
.bg_2,
.bg_design,
.main_logo,
.main_title_container,
header {
  position: absolute;
}
.but_desc_2,
.desc_but,
.foot_1_1,
.main_navigation,
.pro_ppl_cont,
.sec_title,
.socials {
  align-content: center;
}
.gallery_text,
.solo_text {
  mix-blend-mode: difference;
}
#myVideo,
.image {
  object-fit: cover;
}
.spon_clip,
.spon_cont {
  scroll-snap-type: x mandatory;
}
.acol,
.desc_but,
.link,
.loca_a,
.login_redirect a,
.navigation_links,
a {
  text-decoration: none;
}
body {
  background-color: #282828;
  height: 100vh;
  width: 100vw;
  scroll-behavior: smooth;
}
.bg_design,
section {
  height: 100%;
  top: 0;
  left: 0;
}
section {
  margin: 0;
  width: 100%;
}
header {
  width: 100%;
  z-index: 10;
}
@font-face {
  font-family: oo;
  src: url("./Montserrat-Medium.woff2");
  font-display: swap;
}
@font-face {
  font-family: prak;
  src: url("./prakrta_.woff2");
  font-display: swap;
}
@font-face {
  font-family: jura;
  src: url("./Jura-VariableFont_wght.woff2");
  font-display: swap;
}
#image3,
#image4,
#image5 {
  transition: none;
}
.bg_design {
  background-image: url("./logo h  2.webp");
  width: 100%;
  background-origin: center;
  background-size: contain;
  background-repeat: no-repeat;
  transition: 0.2s linear;
}
.bg_2 {
  transform: rotate(1deg);
  border-radius: 32%;
  left: 80%;
  top: 90%;
  height: 48vw;
  width: 39vw;
}
.main_logo {
  height: 5vw;
  width: fit-content;
  margin-left: 4vw;
  top: 2vw;
  z-index: 0;
  transition: 0.2s ease-in-out;
}
.main_logo svg {
  fill: rgba(255, 255, 255, 0.8);
  stroke: none;
  height: 5vw;
  width: 5vw;
  transition: 1s ease-in;
}
.main_logo:hover svg {
  stroke: rgb(141, 141, 141);
}
#ph_number,
.main_logo svg path,
.title_back_con span {
  transition: 0.2s ease-in-out;
}
.main_logo:hover svg path {
  fill: grey;
  stroke: white;
}
.svg_container_design {
  position: absolute;
  top: 0;
  display: none;
}
.main_desc,
.main_navigation,
.sample_body,
.socials {
  display: flex;
  display: flex;
}
.svg_container_design svg {
  opacity: 0.5;
  height: 77vh;
  transition: 0.3s ease-in-out;
  animation-direction: alternate;
  left: -15%;
}
@keyframes svg_design {
  0% {
    stroke-dasharray: 300;
    stroke-dashoffset: 50%;
    stroke-opacity: 0.5;
  }
  100% {
    stroke-dasharray: 1000;
    stroke-opacity: 0.1;
    stroke-dashoffset: 90%;
  }
}
.main_title_container {
  top: 51%;
  left: 80%;
  transform: translate(-80%, -51%);
}
.svg_container svg {
  height: 6.3vw;
  width: 52vw;
}
.main_title_text {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  color: #fff;
  text-align: center;
  letter-spacing: 0.4vw;
  font-weight: 100;
  font-size: 0.77vw;
}
.main_signin,
.navigation_links {
  color: #fff !important;
  font-family: oo;
  font-size: 1vw;
}
.main_desc {
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-top: 1vw;
  gap: 2vw;
}
.line {
  width: 9vw;
  height: 0.1vw;
  background: rgba(255, 255, 255, 0.2);
}
.arrow_container,
.socials {
  width: fit-content;
  position: absolute;
  opacity: 0;
}
.socials {
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: center;
  gap: 1.7vw;
  top: 92%;
  height: fit-content;
  margin-left: 5%;
  transition: 0.4s;
}
.socials .fa {
  color: rgba(255, 255, 255);
  font-size: 1.4vw;
  opacity: 0.8;
}
.arrow_container {
  height: 1vw;
  left: 93%;
  top: 91%;
  animation: 0.7s ease-in 4.1s forwards fade_down;
}
@keyframes fade_down {
  0% {
    opacity: 0;
    top: 84%;
  }
  100% {
    opacity: 1;
    top: 91%;
  }
}
.arrow_container svg {
  height: 9vw;
  top: -7.4vw;
  position: absolute;
  transition: 1s ease-in-out;
}
.arrow_container svg:hover {
  animation: 1s forwards arrow_dash;
}
@keyframes arrow_dash {
  0% {
    stroke-dashoffset: 300;
    stroke-dasharray: 290;
    opacity: 0;
  }
  70% {
    opacity: 1;
  }
  100% {
    opacity: 1;
    stroke-dasharray: 300;
    stroke-dashoffset: 0%;
  }
}
.main_navigation {
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;
  gap: 4vw;
  margin: 4vw;
  width: 100%;
  position: relative;
}
.navigation_links {
  font-weight: 100;
  z-index: 2;
  opacity: 0;
  animation: 0.5s ease-in 4.2s forwards popp;
}
@keyframes popp {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
.main_signin {
  position: absolute;
  left: 88%;
  top: 3vw;
  border-radius: 7px;
  background-color: #52525265;
  background-color: #0000002e;
  padding: 0.9vw 2vw;
  width: 4vw;
  text-align: center;
  z-index: 1;
}
.main_signin:hover {
  background-color: #7f7f7f;
}
.container {
  position: relative;
  background-color: #000;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}
.image {
  position: absolute;
  width: 100%;
  height: 100%;
  transition: 0.2s ease-out;
}
.cursor,
.noise-container {
  position: fixed;
  pointer-events: none;
}
.noise-container,
.sample_body {
  height: 100vh;
  width: 100vw;
  left: 0;
  top: 0;
}
.noise-container {
  background-attachment: fixed;
  background-repeat: repeat;
  background-size: auto;
  opacity: 1;
  transition: 1s;
  z-index: 102;
  background-image: url("./noise.webp");
  animation: 1s steps(10) infinite noise-animation;
  background-position: 0 0;
  filter: contrast(0.5);
}
@keyframes noise-animation {
  100% {
    background-position: 100% 100%;
  }
}
.sample_body {
  margin: 0;
  background-color: #010;
  z-index: 0;
  color: #fff;
  justify-content: center;
  align-items: center;
}
.cursor {
  width: 2.1vw;
  height: 2.1vw;
  border: 0.1vw solid rgba(255, 255, 255, 0);
  transition: linear;
  z-index: 1000;
  display: none;
}
.cursor_border,
.cursor_circle {
  border-radius: 50%;
  text-align: center;
}
/* ... */

